k8s/namespaces/development/comfyui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comfyui
  namespace: development
  labels:
    app.kubernetes.io/name: comfyui
    app.kubernetes.io/managed-by: flux
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: comfyui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: comfyui
        app.kubernetes.io/managed-by: flux
    spec:
      automountServiceAccountToken: false
      runtimeClassName: nvidia
      containers:
        - name: comfyui
        # renovate: datasource=docker depName=docker.io/yanwk/comfyui-boot
          image: docker.io/yanwk/comfyui-boot:cu129-slim-20250901@sha256:db3c43361634cc8fcf4fd4ce303e92db06273fabb13e4eadd0b946da1170e132
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8188
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /root
          resources:
            requests:
              cpu: "2"
              memory: "20Gi"
              ephemeral-storage: "10Gi"
              nvidia.com/gpu: "1"
            limits:
              cpu: "4"
              memory: "20Gi"
              ephemeral-storage: "20Gi"
              nvidia.com/gpu: "1"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: comfyui-config
